# microsoft-synapse-link-batch-collector

./: README.md  docker-compose.yaml  populate-cdm-container.py  pyproject.toml
.container/: Dockerfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: black.yaml  build-container-image.yaml  publish-ecr-public.yaml  pylint.yaml  test.yaml
microsoft_synapse_batch_collector/: main.py  run_setup.py
microsoft_synapse_batch_collector/models/: run_config.py  uploaded_batch.py
microsoft_synapse_batch_collector/processing/: azure_cleanup.py  s3_transfer.py  synapse.py
tests/: conftest.py  test_batch_collection.py
